<resources>
    <string name="app_name">Enjoy Your Time</string>

    <string name="main_menu_header">Main Menu</string>
    <string name="coming_soon">Coming soon...</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_yoda_write">YodaWrite</string>

    <string name="title_activity_name_compatibility">Name Compatibility</string>
    <string name="your_phrase">Your phrase...</string>
    <string name="your_result">Your result... could take some seconds to appear</string>
    <string name="execute_yoda_write">Execute you must</string>
    <string name="your_name">Your name...</string>
    <string name="your_couple_name">Your couple name...</string>
    <string name="execute_name_compatibility">Execute</string>
    <string name="language_title">Languages</string>
    <string name="summary">To choose the preferred language</string>
    <string name="title_preferences">Settings</string>
</resources>
